--- a/musicdb-app/Frontend-react/package.json
+++ b/musicdb-app/Frontend-react/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:8000",
+  "proxy": "http://localhost:8000/",
   "name": "music_service",
   "version": "0.1.0",
   "private": true,
