--- a/musicdb-app/Frontend-react/package.json
+++ b/musicdb-app/Frontend-react/package.json
@@ -18,6 +18,8 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.2",
+    "react-native-star-rating": "^1.1.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
